<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/item_name" android:text="@string/Item_Name"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/input_item_name">
        <requestFocus></requestFocus>
    </EditText>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cancel" android:text="@string/Cancel"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Geotag_It" android:id="@+id/button_geotag_it_new"></Button>
    </LinearLayout>
    
</LinearLayout>
